--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,7 @@
 		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	%svelte.head%
+	<title>Svelte-SortableJS</title>
 </head>
 
 <body>
